WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
51171
[GTK] Wrong check in ResourceHandleSoup in error cases
https://bugs.webkit.org/show_bug.cgi?id=51171
Summary
[GTK] Wrong check in ResourceHandleSoup in error cases
Sergio Villar Senin
Reported
2010-12-16 01:56:09 PST
Wrong check in ResourceHandleSoup in error cases
Attachments
Patch
(1.68 KB, patch)
2010-12-16 02:04 PST
,
Sergio Villar Senin
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sergio Villar Senin
Comment 1
2010-12-16 02:04:55 PST
Created
attachment 76744
[details]
Patch
Sergio Villar Senin
Comment 2
2010-12-16 02:08:38 PST
BTW the crash was previously see here
https://bugs.webkit.org/show_bug.cgi?id=51104#c2
. This patch does not fix the test (as it needs authentication challenge support in WebKitGtk+) but it fixes the crash.
Martin Robinson
Comment 3
2010-12-16 07:34:17 PST
Comment on
attachment 76744
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=76744&action=review
> WebCore/platform/network/soup/ResourceHandleSoup.cpp:-512 > // WebCore might have cancelled the job in the while > - if (!d->m_cancelled && soupMsg->response_body->data)
Better leave a comment here before landing this which explains the issue.
Sergio Villar Senin
Comment 4
2010-12-17 04:46:52 PST
Committed
r74251
: <
http://trac.webkit.org/changeset/74251
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug