2010-12-16  Sergio Villar Senin  <svillar@igalia.com>

Reviewed by Martin Robinson.

        Wrong check in ResourceHandleSoup in error cases
        https://bugs.webkit.org/show_bug.cgi?id=51171

        Calling didReceiveData with no data causes a crash in debug
        builds. Checking for soupMsg->response_body->data is not correct as libsoup
        always creates a buffer for that. Instead we should check for
        soupMsg->response_body->length

        * platform/network/soup/ResourceHandleSoup.cpp:
        (WebCore::sendRequestCallback):

Canonical link: https://commits.webkit.org/64596@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74251 268f45cc-cd09-0410-ab3c-d52691b4dbfc